crates/pamoja-ffi/include/pamoja.h


typedef enum {
  PamojaStatus_Ok = 0,
  PamojaStatus_Transport = 1,
  PamojaStatus_Io = 2,
  PamojaStatus_Codec = 3,
  PamojaStatus_Closed = 4,
  PamojaStatus_Unsupported = 5,
  PamojaStatus_InvalidArgument = 6,
  PamojaStatus_Other = 7,
  PamojaStatus_Panic = 8,
  PamojaStatus_Auth = 9,
} PamojaStatus;
typedef struct PamojaMavlinkDialect PamojaMavlinkDialect;
typedef struct PamojaMavlinkFrame PamojaMavlinkFrame;
typedef struct PamojaMavlinkMessage PamojaMavlinkMessage;
typedef struct PamojaMavlinkSchema PamojaMavlinkSchema;
typedef struct PamojaMavlinkSchemaBuilder PamojaMavlinkSchemaBuilder;
typedef struct {
  uint8_t system_id;
  uint8_t component_id;
  uint8_t sequence;
} PamojaMavlinkHeader;
typedef struct {
  const char *name;
  const char *type_name;
  uint32_t field_type;
  uint8_t array_len;
  uint8_t extension;
  uintptr_t offset;
} PamojaMavlinkFieldInfo;
PamojaStatus pamoja_mavlink_schema_for_id(uint32_t msgid, PamojaMavlinkSchema **out_schema);
PamojaStatus pamoja_mavlink_schema_for_name(const char *name, PamojaMavlinkSchema **out_schema);
uintptr_t pamoja_mavlink_schema_count(void);
PamojaStatus pamoja_mavlink_schema_at(uintptr_t index, PamojaMavlinkSchema **out_schema);
uint32_t pamoja_mavlink_schema_id(const PamojaMavlinkSchema *schema);
const char *pamoja_mavlink_schema_name(const PamojaMavlinkSchema *schema);
uint8_t pamoja_mavlink_schema_crc_extra(const PamojaMavlinkSchema *schema);
uintptr_t pamoja_mavlink_schema_wire_len(const PamojaMavlinkSchema *schema);
uintptr_t pamoja_mavlink_schema_field_count(const PamojaMavlinkSchema *schema);
PamojaStatus pamoja_mavlink_schema_field(const PamojaMavlinkSchema *schema,
                                         uintptr_t index,
                                         PamojaMavlinkFieldInfo *out_field);
void pamoja_mavlink_schema_free(PamojaMavlinkSchema *schema);
PamojaStatus pamoja_mavlink_dialect_add_schema(PamojaMavlinkDialect *dialect,
                                               const PamojaMavlinkSchema *schema);
PamojaMavlinkSchemaBuilder *pamoja_mavlink_schema_builder_new(uint32_t msgid, const char *name);
PamojaStatus pamoja_mavlink_schema_builder_field(PamojaMavlinkSchemaBuilder *builder,
                                                 const char *name,
                                                 uint32_t field_type,
                                                 uint8_t array_len);
PamojaStatus pamoja_mavlink_schema_builder_extension(PamojaMavlinkSchemaBuilder *builder,
                                                     const char *name,
                                                     uint32_t field_type,
                                                     uint8_t array_len);
PamojaStatus pamoja_mavlink_schema_builder_build(PamojaMavlinkSchemaBuilder *builder,
                                                 PamojaMavlinkSchema **out_schema);
void pamoja_mavlink_schema_builder_free(PamojaMavlinkSchemaBuilder *builder);
PamojaStatus pamoja_mavlink_message_new(const PamojaMavlinkSchema *schema,
                                        PamojaMavlinkMessage **out_message);
PamojaStatus pamoja_mavlink_message_decode(const PamojaMavlinkSchema *schema,
                                           const uint8_t *payload,
                                           uintptr_t payload_len,
                                           PamojaMavlinkMessage **out_message);
const uint8_t *pamoja_mavlink_message_payload(const PamojaMavlinkMessage *message,
                                              uintptr_t *out_len);
PamojaStatus pamoja_mavlink_message_to_frame(const PamojaMavlinkMessage *message,
                                             PamojaMavlinkHeader header,
                                             PamojaMavlinkFrame **out_frame);
void pamoja_mavlink_message_free(PamojaMavlinkMessage *message);
PamojaStatus pamoja_mavlink_message_get_int(const PamojaMavlinkMessage *message,
                                            const char *field,
                                            uintptr_t index,
                                            int64_t *out_value);
PamojaStatus pamoja_mavlink_message_get_uint(const PamojaMavlinkMessage *message,
                                             const char *field,
                                             uintptr_t index,
                                             uint64_t *out_value);
PamojaStatus pamoja_mavlink_message_get_float(const PamojaMavlinkMessage *message,
                                              const char *field,
                                              uintptr_t index,
                                              double *out_value);
PamojaStatus pamoja_mavlink_message_set_int(PamojaMavlinkMessage *message,
                                            const char *field,
                                            uintptr_t index,
                                            int64_t value);
PamojaStatus pamoja_mavlink_message_set_uint(PamojaMavlinkMessage *message,
                                             const char *field,
                                             uintptr_t index,
                                             uint64_t value);
PamojaStatus pamoja_mavlink_message_set_float(PamojaMavlinkMessage *message,
                                              const char *field,
                                              uintptr_t index,
                                              double value);
PamojaStatus pamoja_mavlink_message_get_number(const PamojaMavlinkMessage *message,
                                               const char *field,
                                               uintptr_t index,
                                               double *out_value);
PamojaStatus pamoja_mavlink_message_set_number(PamojaMavlinkMessage *message,
                                               const char *field,
                                               uintptr_t index,
                                               double value);
PamojaStatus pamoja_mavlink_message_get_bytes(const PamojaMavlinkMessage *message,
                                              const char *field,
                                              uint8_t *out_bytes,
                                              uintptr_t out_bytes_len);
PamojaStatus pamoja_mavlink_message_set_bytes(PamojaMavlinkMessage *message,
                                              const char *field,
                                              const uint8_t *bytes,
                                              uintptr_t bytes_len);